Google Data APIs Objective-C Client Library
Framework Release Notes

Project site:     http://code.google.com/p/gdata-objectivec-client/
Discussion group: http://groups.google.com/group/gdata-objectivec-client-framework

Changed since 1.12.0

Additions

- Added MD5Checksum, GDataDocFilename, GDataDocSuggestedFilename,
  GDataDocLastCommented to document entries

- Added Docs Changes feed

- Added GDataACLAdditionalRole

- Added 3d query parameter for YouTube

- Added fetcher shouldFetchInBackground property to service objects

- Added code to the YouTube sample showing how to restart a stopped upload

Changes

- Replaced GDataHTTPFetcher with GTMHTTPFetcher

- Replaced GDataOAuth with GTMOAuth2

- Feed objects now support NSFastEnumeration of entries

- YouTube uploads now return a GDataEntryYouTubeVideo object

- The YouTube upload URL is now https

- Removed Translator Toolkit support

- Remove upload callbacks on systems without NSURLConnection's didSendBodyData:
  support (only affects users running early releases of Mac OS X 10.5)

Bugs Fixed


Release 1.12.0
8-April-2011
Changes since 1.11.0

Additions

- Added static cookie storage accessor to http fetcher

- Added requirealldeleted query parameter

- Added authenticationInfo accessor for fetch error userInfo

- Added yt:name attribute to media:thumbnail

- Added calendar max-attendees query parameter and free/busy feeds

- Added docs:documentDescription and DocList thumbnailLink

Changes

- Tightened up syntax for use with C++ compilers

- The operation queue used for parsing in the service class now has accessors
  (thanks saggau)

- Project now uses latest SDKs rather than specific versions

- NSURLErrorNetworkConnectionLost is now retryable by default for 10.5 and later
  builds

- For chunk uploads, status 502 is now retryable by default

- Blogger now uses https

- Removed Google Base support

Bugs Fixed

- Fixed leak in elements allocated with GDataXMLElement's initWithXMLString:
  (thanks dshimshoni)