@@ -8,6 +8,8 @@ Changed since 1.12.0
 
 Additions
 
+- Added service method fetchEntryByUpdatingEntry:forEntryURL:completionHandler:
+
 - Added MD5Checksum, GDataDocFilename, GDataDocSuggestedFilename,
   GDataDocLastCommented to document entries
 
